--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,15 +1,40 @@
-<!--
-  Generated template for the SignupPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>Signup</ion-title>
+    <ion-title>Cadastre-se</ion-title>
   </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
 
+<ion-content>
+  <form (submit)="doSignup()">
+    <ion-list>
+
+      <ion-item>
+        <ion-label fixed>Nome</ion-label>
+        <ion-input type="text" [(ngModel)]="account.nome" name="nome"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label fixed>Email</ion-label>
+        <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label fixed>Senha</ion-label>
+        <ion-input type="password" [(ngModel)]="account.senha" name="senha"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label fixed>Saldo</ion-label>
+        <ion-label fixed>R$ 1000000</ion-label>
+      </ion-item>
+
+      <div padding>
+        <button ion-button color="primary" block>Cadastre-se</button>
+      </div>
+
+    </ion-list>
+  </form>
 </ion-content>
