--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,15 +1,30 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Entrar</ion-title>
   </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
 
+<ion-content>
+  <form (submit)="doLogin()">
+    <ion-list>
+
+      <ion-item>
+        <ion-label fixed>Email</ion-label>
+        <ion-input type="email" [(ngModel)]="account.email" name="email"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label fixed>Senha</ion-label>
+        <ion-input type="password" [(ngModel)]="account.senha" name="senha"></ion-input>
+      </ion-item>
+
+      <div padding>
+        <button ion-button color="primary" block>Entrar</button>
+      </div>
+
+    </ion-list>
+  </form>
 </ion-content>
