--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -2,7 +2,9 @@
   <div class="splash-bg"></div>
   <div class="splash-info">
     <div class="splash-intro">
-      Bem vindo {{account.nome}}
+      <h3>Bem vindo {{account.nome}}</h3>
+      <br><br>
+      <h3>Saldo: R$ {{account.saldo}}</h3>
     </div>
   </div>
   <div padding>
