--- a/src/pages/investimentos/investimentos.html
+++ b/src/pages/investimentos/investimentos.html
@@ -1,15 +1,16 @@
-<!--
-  Generated template for the InvestimentosPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>Investimentos</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let item of investimentos">
+      <button ion-item (click)="openItem(item)"> 
+        <h2>{{item.nome}}</h2>
+        <p>{{item.emissor}}</p>
+      </button>
+    </ion-item>
+  </ion-list>
 </ion-content>
