--- a/src/pages/carteira-detail/carteira-detail.html
+++ b/src/pages/carteira-detail/carteira-detail.html
@@ -1,19 +1,18 @@
 <!--
-  Generated template for the InvestimentoDetailPage page.
+  Generated template for the CarteiraDetailPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>Investimento</ion-title>
+    <ion-title>Detalhes do Investimento</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
   <div class="item-detail">
-    <h3>Saldo em conta: R$ {{account.saldo}}</h3>
+    <h3>Valor investido: R$ {{valorInvestido}}</h3>
     <br>
     <p>
       Informações do investimento:<br>
@@ -23,18 +22,5 @@
       <b>Resgate: </b> {{investimento.resgate}}<br>
       <b>Taxa: </b> {{investimento.taxa}}<br>
     </p>
-    <br><br><br>
-    <form (submit)="investir()" class='formInvestir'>
-      <ion-list>
-        <ion-item no-padding>
-          <ion-label fixed>Investir R$</ion-label>
-          <ion-input type="number" [(ngModel)]="valor" name="valor"></ion-input>
-        </ion-item>
-
-        <div>
-          <button ion-button color="primary" block>Investir</button>
-        </div>
-      </ion-list>
-    </form>
   </div>
 </ion-content>
