--- a/src/pages/carteira-detail/carteira-detail.html
+++ b/src/pages/carteira-detail/carteira-detail.html
@@ -21,6 +21,12 @@
       <b>IR: </b> {{investimento.ir}}<br>
       <b>Resgate: </b> {{investimento.resgate}}<br>
       <b>Taxa: </b> {{investimento.taxa}}<br>
+      <br>
+
+      <button ion-button color="primary" (click)="resgatar()">        
+        Resgatar
+      </button>
+
     </p>
   </div>
 </ion-content>
