--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -28,7 +28,7 @@
 
       <ion-item>
         <ion-label fixed>Saldo</ion-label>
-        <ion-label fixed>R$ 1000000</ion-label>
+        <ion-label fixed>R$ 10000</ion-label>
       </ion-item>
 
       <div padding>
