--- a/src/pages/carteira/carteira.html
+++ b/src/pages/carteira/carteira.html
@@ -18,7 +18,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let item of carteira">
-      <button ion-item (click)="openItem(item.valorInvestido, item.investimentoId)">
+      <button ion-item (click)="openItem(item.valorInvestido, item.investimentoId, item.contaId)">
         <ion-avatar item-start>
           <img src="../../assets/icon/dolar.png" />
         </ion-avatar>
